[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Towers/TowerHandler.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sounds/towerPlace.ogg" type="AudioStream" id=2]
[ext_resource path="res://Assets/Sounds/UISelect.ogg" type="AudioStream" id=3]

[node name="TowerHandler" type="Node2D"]
script = ExtResource( 1 )

[node name="SFX" type="Node" parent="."]

[node name="SoundPlaceTower" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 2 )
bus = "Sound"

[node name="SoundButtonClick" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 3 )
bus = "Sound"
